fixtures/cs-jwt-03/good/no-jsonwebtoken.ts
export function readToken(token: string) {
	return token.split(".")[1];
}
